--- a/source/sass/element/_paragraph.scss
+++ b/source/sass/element/_paragraph.scss
@@ -1,3 +1,7 @@
 p {
     margin: 0;
 }
+
+p {
+    margin-top: $base * 2;
+}
