--- a/source/sass/object/_article.scss
+++ b/source/sass/object/_article.scss
@@ -5,47 +5,21 @@ $article-content-headings:
 $article-content-elements:
 'p', 'ul', 'ol', 'blockquote', 'img', 'figure', 'table', 'div' !default;
 
-
-.article {
-    margin: auto;
-
-    &--readable-width {
-        max-width: 544px;
-    }
-}
-
 .c-article {
-    @each $element in $article-content-elements {
-        & > #{$element} {
-             margin-top: $base * 3;
-        }
+    #{$article-content-elements} {
+        margin-top: $base * 2;
     }
 
-    #{$article-content-headings} {
-        margin-top: $base * 5;
-    }
-
-    #{$article-content-headings} {
-        @each $element in $article-content-elements {
-            & + #{$element} {
-                 margin-top: $base * 2;
-            }
-        }
-    }
-
-    #{$article-content-headings} {
-        @each $heading in $article-content-headings {
-            & + #{$heading} {
-                 margin-top: $base * 2;
-            }
-        }
-    }
-
-    h1 + * {
-        margin-top: $base * 3;
+    h1, .h1 {
+        margin-bottom: $base * 3;
     }
 
     *:first-child {
         margin-top: 0;
     }
+
+}
+
+.c-article.c-article--readable-width {
+    max-width: $base * 76;
 }
